# py-nyc-311-calendar

./: .deepsource.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  Statuses via FOIL-2022-858-00121.xlsx  requirements-dev.txt  requirements.txt  sample_response.json  setup.cfg
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: unknown-service-or-status.md
.github/workflows/: codeql-analysis.yml  codeql.yml  publish-to-pypi.yml
civcalnyc/: civcalapi.py
examples/: get_next_exceptions_calendar.py
nyc311calendar/: __init__.py  api.py  services.py  util.py
src/civcalnyc/: civcalapi.py  util.py
src/nyc311calendar/: __init__.py  api.py  util.py
