[metadata]
name = civcalnyc
version = 2021.12-4
author = Elahd Bar-Shai
author_email = civcalnyc@elahd.com
description = Simple fetcher for NYC 311 trash collection, school closing, and alternate side parking schedules. Built to drive a Home Assistant add-in.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elahd/civcalnyc
project_urls =
    Bug Tracker = https://github.com/elahd/civcalnyc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = civcalnyc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src