[metadata]
name = nyc311calendar
version = 2021.12-11
author = Elahd Bar-Shai
author_email = nyc311calendar@elahd.com
description = Simple fetcher for NYC 311 trash collection, school closing, and alternate side parking schedules. Built to drive a Home Assistant add-in.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elahd/nyc311calendar
project_urls =
    Bug Tracker = https://github.com/elahd/nyc311calendar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src